# UOB_Year1

./: README.md
FunctionalCode/: Recursion.hs
FunctionalCode/HSCourseWork/CW1-PowerToThePeople/: .gitignore  PowerToThePeople.cabal
FunctionalCode/HSCourseWork/CW1-PowerToThePeople/src/: Power.hs  Tests.hs
FunctionalCode/HSCourseWork/CW1-PowerToThePeople/test/: Main.hs
FunctionalCode/HSCourseWork/CW2-Simplify/: README.md  Simplify.cabal
FunctionalCode/HSLabs/: Worksheet1  Worksheet1.hs  Worksheet2.hs  Worksheet3.hs  Worksheet4.hi  Worksheet4.hs  Worksheet4.lhs  Worksheet5.hs  Worksheet6.hs  Worksheet7.hs  Worksheet8.hs  Worksheet9.hs  hsToLhs.hi  hsToLhs.hs
FunctionalCode/HSLectures/: ADTs.hs  DataTrans.hs  Folds.hs  HO.hs  Hangman.hs  KatamariHaskacy.hs  Lecture1.hs  Monads.hs  PatternsLists.hs  Polymorphism.hs  PurityAndIO.hs  Recursion.hs  Types.hs  functors.hs  notes.txt
FunctionalCode/HSTutorials/: ho.hs  strings.hs  zippy.hs
ImperativeCode/: Makefile
ImperativeCode/BigIntegerChallange/: Makefile  interest  square
ImperativeCode/CLectures/: Arrays.c  BinaryTree.c  Bits.c  Characters.c  Decistions&Recursion.c  DynamicData.c  FunctionPointers.c  Lists.c  LiteralsEnumsConstants.c  LoopsJumps  LoopsJumps.c  Macros.c  Makefile  Pointer.c  Structures.c  notes.txt
ImperativeCode/CTutorials/: string.c
ImperativeCode/Hail&Thunder/: collatz.c  cube  factorial  factorial.c  sphere
ImperativeCode/Lectures/: Decistions&Recursion.c  HelloWorld.c  Paint.c  test.c
ImperativeCode/TowerOfHanoi/: backwards.c
OOPCode/JavaLectures/: notes.txt
(+59 files in other folders)
